# faden

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: proposal-ai-categorizing-clustering.md  sync-architecture.md  undo-sketch.md
docs/plan/: 01-local-sync-metadata-foundation.md  02-operation-outbox-and-write-normalization.md  03-local-migration-and-repair-primitives.md  04-auth-tenancy-and-device-registration.md  05-server-storage-model-and-materialized-state.md  06-snapshot-bootstrap-and-http-sync.md  07-blob-and-media-sync.md  08-conflict-detection-and-resolution-ui.md  09-realtime-websocket-and-presence.md  10-offline-divergence-hardening-and-edit-coordination.md
docs/proposals/: add-interview-dialog-simplification.md
scripts/: bump-version.sh  fetch-binaries.sh  generate-aur-git-package.sh  generate-aur-package.sh
src/: main.tsx  router.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/: faden.desktop.hbs
src-tauri/src/: app_state.rs  error.rs  lib.rs  llm.rs  main.rs  media_server.rs  secrets.rs
src-tauri/src/ai/: categorize.rs  cluster_suggest.rs  codebook_gen.rs  cost.rs  find_more.rs  mod.rs  pretag.rs  prompts.rs  text.rs
src-tauri/src/commands/: ai.rs  codebook.rs  export.rs  history.rs  interview.rs  mod.rs  person.rs  project.rs  segment.rs  settings.rs  tagging.rs  transcribe.rs  util.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: m001_init.sql  m002_main.sql  m003_ai_staging.sql  m004_tag_optional_parent.sql  m005_category_optional_cluster.sql  m006_segment_speaker_nullable.sql  m007_ai_run_raw_output.sql  m008_ai_run_input_json.sql  m009_ai_run_ops.sql  m010_history.sql  m011_people.sql  m012_person_contact_details.sql  m013_ai_structuring_kinds.sql  m014_ai_run_task_log.sql  m015_speaker_interviewer.sql  mod.rs
src-tauri/src/db/queries/: ai_run.rs  ai_run_ops.rs  category.rs  cluster.rs  interview.rs  memo.rs  mod.rs  person.rs  project_meta.rs  proposal.rs  segment.rs  span_tag.rs  speaker.rs  stats.rs  tag.rs  tagged_span.rs
src-tauri/src/domain/: codebook.rs  mod.rs
src-tauri/src/export/: codebook.rs  csv_export.rs  markdown.rs  mod.rs  refi_qda.rs  stats.rs
src-tauri/src/history/: mod.rs
src-tauri/src/import/: alignment.rs  ingest.rs  json_schema.rs  mod.rs  plain_text.rs
src-tauri/src/settings/: mod.rs  project.rs
src-tauri/src/transcription/: cache.rs  chunker.rs  ffmpeg.rs  gemini.rs  mod.rs  openai.rs  pipeline.rs  progress.rs  prompts.rs  retry.rs  schema.rs
src-tauri/tests/: ai_codebook_gen.rs  ai_cost.rs  ai_find_more.rs  ai_pretag.rs  ai_prompts.rs  ai_run.rs  ai_run_ops.rs  ai_structuring_prompts.rs  app_state.rs  audio_import.rs  codebook.rs  export_codebook.rs  export_csv.rs  export_markdown.rs  export_refi_qda.rs  export_snapshot.rs  export_stats.rs  history.rs  import_alignment.rs  import_ingest.rs  import_json_schema.rs  import_plain_text.rs  interview.rs  memo.rs  migrations.rs  project_commands.rs  project_settings.rs  proposal.rs  settings.rs  span_tag.rs  tagged_span.rs  tagging_commands.rs  transcription_cache.rs  transcription_chunker.rs  transcription_ffmpeg.rs  transcription_gemini.rs  transcription_gemini_cassette.rs  transcription_prompts.rs  transcription_retry.rs  transcription_schema.rs
src/components/: ErrorBanner.module.css  (+6 more)
(+160 files in other folders)
