[package]
name = "faden"
version = "0.2.3"
description = "Faden - desktop app for qualitative interview research"
homepage = "https://faden.space"
authors = ["Pavel Žák"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "faden_app_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.31"
thiserror = "1"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "process",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "multipart",
  "rustls-tls",
  "stream",
] }
futures = "0.3"
bytes = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
async-trait = "0.1"
tokio-util = "0.7"
axum = "0.8"
tauri-plugin-opener = "2"
rand = "0.8"
csv = "1"
quick-xml = "0.31"
deunicode = "1"
tiktoken-rs = "0.7"
keyring = "2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
